tests/fixtures/invalid/range_step_negative.gcl
// error: linspace step must be positive
index TimeStep = linspace(0.0 s, 1.0 s, step: -0.1 s);
